--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "url": "https://github.com/goodeggs/geomoment-angular/issues"
   },
   "dependencies": {
-    "geomoment": ">=0.3.1"
+    "geomoment": "^0.5.0"
   },
   "devDependencies": {
     "mocha": "~1.15.1",
