--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "url": "https://github.com/goodeggs/geomoment-angular/issues"
   },
   "dependencies": {
-    "geomoment": "^0.5.0"
+    "geomoment": "0.5.1"
   },
   "devDependencies": {
     "mocha": "~1.15.1",
@@ -38,6 +38,8 @@
     "angular": "~1.2.2",
     "karma-mocha": "~0.1.1",
     "karma-chai": "~0.0.2",
-    "karma": "~0.10.8"
+    "karma": "~0.10.8",
+    "karma-chrome-launcher": "0.1.3",
+    "karma-coffee-preprocessor": "0.1.3"
   }
 }
